--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
   
 <html>
-    <head>
-      <script src="https://cdn.jsdelivr.net/npm/comfy.js@latest/dist/comfy.min.js"></script>
-      <link rel="stylesheet" href="index.css">
-      <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Open+Sans&display=swap" rel="stylesheet">
-    </head>
-    <body>
-      <div class="poll" id="content"></div>
-      <audio style="display: none;" controls muted="muted" autoplay></audio>
-      <script src="./queue.js"></script>
-      <script src="./index.js"></script>
-    </body>
-  </html>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/comfy.js@latest/dist/comfy.min.js"></script>
+    <link rel="stylesheet" href="./index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Open+Sans&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    
+    <div class="yesContainer inline" id="content"></div>
+    <div class="bar inline"></div>
+    <div class="noContainer inline" id="content2"></div>
+    <audio style="display: none;" controls muted="muted" autoplay></audio>
+    <script src="./index.js"></script>
+  </body>
+</html>
